--- a/index.html
+++ b/index.html
@@ -1,39 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Your Name - Home</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-color: #f9f9f9;">
-
-    <header style="background-color: #333; color: white; text-align: center; padding: 20px;">
-        <h1 style="margin: 0; font-size: 36px;">Welcome to My World</h1>
-        <img src="your_photo.jpg" alt="Your Photo" style="border-radius: 50%; width: 150px; height: 150px; margin-top: 20px; border: 5px solid #008080;">
-        <p style="margin: 10px 0; font-size: 20px;">Student ID: Your Student ID</p>
-    </header>
-
-    <nav style="background-color: #555; overflow: hidden;">
-        <ul style="list-style-type: none; margin: 0; padding: 0;">
-            <li style="float: left;"><a href="index.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Home</a></li>
-            <li style="float: left;"><a href="hometown.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Home Town</a></li>
-            <li style="float: left;"><a href="activity.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Favorite Activity</a></li>
-        </ul>
-    </nav>
-
-    <section id="about" style="margin: 30px; text-align: center;">
-        <h2 style="color: #333; font-size: 28px;">About Me</h2>
-        <p style="font-size: 18px;">Hello! I'm [Your Name], a passionate fashion designer and student at UTS. I believe in the power of creativity to inspire and transform. Join me on this exciting journey of style and self-expression.</p>
-    </section>
-
-    <section id="contact" style="margin: 30px; text-align: center;">
-        <h2 style="color: #333; font-size: 28px;">Get in Touch</h2>
-        <p style="font-size: 18px;">Connect with me via email: <a href="mailto:your.email@domain.com" style="color: #008080; text-decoration: none; font-weight: bold;">your.email@domain.com</a></p>
-    </section>
-
-    <footer style="background-color: #333; color: white; text-align: center; padding: 20px;">
-        <p style="font-size: 16px;">&copy; 2024 Your Name</p>
-    </footer>
+<body>
+    <h1 id="title">Welcome to John Doe's Website</h1>
+    <img src="john_doe.jpg" alt="John Doe">
+    <p class="intro">Hello, my name is John Doe and I am a student at UTS. My student ID is 123456. I am studying Computer Science and I love playing soccer in my free time. I also enjoy reading, hiking, and coding. I am passionate about technology and its potential to change the world.</p>
+    <a href="hometown.html">My Hometown</a>
+    <a href="activity.html">My Favourite Activity</a>
 </body>
 </html>
