--- a/activity.html
+++ b/activity.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Your Name - Favorite Activity</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-color: #f9f9f9;">
-
-    <header style="background-color: #333; color: white; text-align: center; padding: 20px;">
-        <h1 style="margin: 0; font-size: 36px;">Embark on the Art of Fashion Designing</h1>
-    </header>
-
-    <nav style="background-color: #555; overflow: hidden;">
-        <ul style="list-style-type: none; margin: 0; padding: 0;">
-            <li style="float: left;"><a href="index.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Home</a></li>
-            <li style="float: left;"><a href="hometown.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Home Town</a></li>
-            <li style="float: left;"><a href="activity.html" style="display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Favorite Activity</a></li>
-        </ul>
-    </nav>
-
-    <section id="activity-info" style="margin: 30px; text-align: center;">
-        <h2 style="color: #333; font-size: 28px;">Dive into the World of Fashion</h2>
-        <p style="font-size: 18px;">Fashion designing is not just a career; it's an art form. As a designer, I weave stories with fabrics, combining tradition and innovation. From sketch to runway, each creation is a testament to creativity and self-expression.</p>
-    </section>
-
-    <footer style="background-color: #333; color: white; text-align: center; padding: 20px;">
-        <p style="font-size: 16px;">&copy; 2024 Your Name</p>
-    </footer>
+<body>
+    <h1>My Favourite Activity: Soccer</h1>
+    <p class="intro">One of my favourite activities is playing soccer. I love the teamwork and strategy involved in the game. I believe it helps me develop my leadership skills and keeps me physically fit. Soccer is more than just a game to me, it's a way of life. It teaches me discipline, perseverance, and the importance of teamwork.</p>
+    <img src="https://preview.redd.it/4ak6dt6qgcp91.jpg?width=640&crop=smart&auto=webp&s=af28442458e1358f5f661fea12905e95678ac6fe" alt="Photo of a soccer game">
+    <a href="index.html">Home</a>
+    <a href="hometown.html">My Hometown</a>
 </body>
 </html>
